--- a/squash-my-pics.sample.cfg
+++ b/squash-my-pics.sample.cfg
@@ -1,3 +1,3 @@
-FOLDER=/path/to/your/images/to/optimize
+PATH=/usr/bin:/bin:/usr/sbin:/sbin
 PRESERVED_TAGS=(-title -description)
 KEEP_ORIGINAL=true
